src/pages/Contact/Contact.css
.contact-container {
    background-color: var(--accent-color);
    padding: 1rem 8rem;
    margin: auto;
    padding-bottom: 50px;
}

.contact-headline {
    font-size: 2rem;
    text-align: center;
    color: var(--secondary-text);
}

.contact-paragraph {
    margin: auto;
    color: var(--secondary-text);
    font-size: 1.25rem;
    text-align: left;
    padding: 1rem;
    /* padding: 25px; */
    width: 50vw;
}

.contact-mail-social-container {
    display: flex;
    flex-direction: column;
    width: 50vw;
    margin: auto;
}

.email-container {
    padding: 1rem;
    padding-right: 25px;
}

.email-icon {
    filter: grayscale(1);
}

.social-icons a {
    padding: 1rem;
    padding-right: 25px;
}

